2017-01-14  Julien Bect  <julien.bect@centralesupelec.fr>

	Makefile: Declare .PHONY targets

	* Makefile: Declare .PHONY targets.

	Makefile: Use timestamp files instead of directories as targets

	* Makefile: Use timestamp files instead of directories as targets.

	Makefile: Add "dist" rule expected by OF admins

	* Makefile: Add "dist" rule to build packages only, as expected by
	Octave Forge admins.

2017-01-14  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init.m: Display GCC version warning only once (Matlab only)

	* stk_init.m (stk_init__compile): Capture GCC version warnings.
	(stk_init__build_mex): Display GCC version warning only once.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

2017-01-13  Julien Bect  <julien.bect@centralesupelec.fr>

	README.md: Explain that there are two releases (closes ticket #62)

	* README.md: Explain that there are two releases, and the specific
	"quick start" procedure for each release.

2017-01-09  Julien Bect  <julien.bect@centralesupelec.fr>

	README.md: Remove warning about STK not starting if GLPK is missing

	* README.md: Remove useless warning about STK not starting is
	Octave is configured without GLPK.  I only met this case once, a
	long time ago, with Octave 3.0 on some BD distro...

2017-01-07  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_kb09.m: Catch a legend-related bug (closes ticket #55)

	* examples/01_kriging_basics/stk_example_kb09.m: Add a try/catch
	block to catch a legend-related bug that shows up in Octave 4.0.x.

2017-01-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Provide help texts for stk_lm_* functions

	* lm/@stk_lm_affine/stk_lm_affine.m: Add help text.
	* lm/@stk_lm_constant/stk_lm_constant.m: Idem.
	* lm/@stk_lm_cubic/stk_lm_cubic.m: Idem.
	* lm/@stk_lm_matrix/stk_lm_matrix.m: Idem.
	* lm/@stk_lm_null/stk_lm_null.m: Idem.
	* lm/@stk_lm_quadratic/stk_lm_quadratic.m: Idem.